Cleanup throughout code for newer java styles